@@ -11,7 +11,12 @@ agreement to USB Forum.  Now, we have new file named gnuk-vidpid.elf
 for flashing.  The file gnuk.elf can be used to generate
 gnuk-vidpid.elf and we can check if it is reproducible or not.
 
-** Remove access with BY_ADMIN
+** Passphrase length check
+
+Now, Gnuk checks length of passphrase if it's too short when
+changing passphrase.
+
+** Remove possible access with BY_ADMIN (to flash ROM data)
 
 For admin-less mode, access by OPENPGP_CARD_INITIAL_PW3 remained on
 flash ROM.  This could be considered a backdoor, if some other person
